Created JS file, linked it to HTMl, and prepared HTML for JS manipulation.

--- a/Chessboard.html
+++ b/Chessboard.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Chess!</title>
+    <link rel="stylesheet" type="text/css" href="Chessboard.css">
   </head>
   <body>
     <header>
@@ -13,86 +14,87 @@
       <p>Player X!</p>
       <table>
         <tr>
-          <td>bR</td>
-          <td>bB</td>
-          <td>bN</td>
-          <td>bK</td>
-          <td>bQ</td>
-          <td>bN</td>
-          <td>bB</td>
-          <td>bR</td>
+          <td id="a8">bR</td>
+          <td id="b8">bB</td>
+          <td id="c8">bN</td>
+          <td id="d8">bK</td>
+          <td id="e8">bQ</td>
+          <td id="f8">bN</td>
+          <td id="g8">bB</td>
+          <td id="h8">bR</td>
         </tr>
         <tr>
-          <td>bP</td>
-          <td>bP</td>
-          <td>bP</td>
-          <td>bP</td>
-          <td>bP</td>
-          <td>bP</td>
-          <td>bP</td>
-          <td>bP</td>
+          <td id="a7">bP</td>
+          <td id="b7">bP</td>
+          <td id="c7">bP</td>
+          <td id="d7">bP</td>
+          <td id="e7">bP</td>
+          <td id="f7">bP</td>
+          <td id="g7">bP</td>
+          <td id="h7">bP</td>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td id="a6"></td>
+          <td id="b6"></td>
+          <td id="c6"></td>
+          <td id="d6"></td>
+          <td id="e6"></td>
+          <td id="f6"></td>
+          <td id="g6"></td>
+          <td id="h6"></td>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td id="a5"></td>
+          <td id="b5"></td>
+          <td id="c5"></td>
+          <td id="d5"></td>
+          <td id="e5"></td>
+          <td id="f5"></td>
+          <td id="g5"></td>
+          <td id="h5"></td>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td id="a4"></td>
+          <td id="b4"></td>
+          <td id="c4"></td>
+          <td id="d4"></td>
+          <td id="e4"></td>
+          <td id="f4"></td>
+          <td id="g4"></td>
+          <td id="h4"></td>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td id="a3"></td>
+          <td id="b3"></td>
+          <td id="c3"></td>
+          <td id="d3"></td>
+          <td id="e3"></td>
+          <td id="f3"></td>
+          <td id="g3"></td>
+          <td id="h3"></td>
         </tr>
         <tr>
-          <td>wP</td>
-          <td>wP</td>
-          <td>wP</td>
-          <td>wP</td>
-          <td>wP</td>
-          <td>wP</td>
-          <td>wP</td>
-          <td>wP</td>
+          <td id="a2">wP</td>
+          <td id="b2">wP</td>
+          <td id="c2">wP</td>
+          <td id="d2">wP</td>
+          <td id="e2">wP</td>
+          <td id="f2">wP</td>
+          <td id="g2">wP</td>
+          <td id="h2">wP</td>
         </tr>
         <tr>
-          <td>wR</td>
-          <td>wB</td>
-          <td>wN</td>
-          <td>wK</td>
-          <td>wQ</td>
-          <td>wN</td>
-          <td>wB</td>
-          <td>wR</td> 
+          <td id="a1">wR</td>
+          <td id="b1">wB</td>
+          <td id="c1">wN</td>
+          <td id="d1">wK</td>
+          <td id="e1">wQ</td>
+          <td id="f1">wN</td>
+          <td id="g1">wB</td>
+          <td id="h1">wR</td>
         </tr>
       </table>
     </main>
   </body>
+  <script src="Chessboard.js"></script>
 </html>
