Further Prepped HTML for Javascript manipulation.

--- a/Chessboard.html
+++ b/Chessboard.html
@@ -14,84 +14,84 @@
       <p>Player X!</p>
       <table>
         <tr>
-          <td id="a8">bR</td>
-          <td id="b8">bB</td>
-          <td id="c8">bN</td>
-          <td id="d8">bK</td>
-          <td id="e8">bQ</td>
-          <td id="f8">bN</td>
-          <td id="g8">bB</td>
-          <td id="h8">bR</td>
+          <td class="tile" id="a8"><div class="piece" draggable="true">bR<div></td>
+          <td class="tile" id="b8"><div class="piece" draggable="true">bB<div></td>
+          <td class="tile" id="c8"><div class="piece" draggable="true">bN<div></td>
+          <td class="tile" id="d8"><div class="piece" draggable="true">bK<div></td>
+          <td class="tile" id="e8"><div class="piece" draggable="true">bQ<div></td>
+          <td class="tile" id="f8"><div class="piece" draggable="true">bN<div></td>
+          <td class="tile" id="g8"><div class="piece" draggable="true">bB<div></td>
+          <td class="tile" id="h8"><div class="piece" draggable="true">bR<div></td>
         </tr>
         <tr>
-          <td id="a7">bP</td>
-          <td id="b7">bP</td>
-          <td id="c7">bP</td>
-          <td id="d7">bP</td>
-          <td id="e7">bP</td>
-          <td id="f7">bP</td>
-          <td id="g7">bP</td>
-          <td id="h7">bP</td>
+          <td class="tile" id="a7"><div class="piece" draggable="true">bP<div></td>
+          <td class="tile" id="b7"><div class="piece" draggable="true">bP<div></td>
+          <td class="tile" id="c7"><div class="piece" draggable="true">bP<div></td>
+          <td class="tile" id="d7"><div class="piece" draggable="true">bP<div></td>
+          <td class="tile" id="e7"><div class="piece" draggable="true">bP<div></td>
+          <td class="tile" id="f7"><div class="piece" draggable="true">bP<div></td>
+          <td class="tile" id="g7"><div class="piece" draggable="true">bP<div></td>
+          <td class="tile" id="h7"><div class="piece" draggable="true">bP<div></td>
         </tr>
         <tr>
-          <td id="a6"></td>
-          <td id="b6"></td>
-          <td id="c6"></td>
-          <td id="d6"></td>
-          <td id="e6"></td>
-          <td id="f6"></td>
-          <td id="g6"></td>
-          <td id="h6"></td>
+          <td class="tile" id="a6"></td>
+          <td class="tile" id="b6"></td>
+          <td class="tile" id="c6"></td>
+          <td class="tile" id="d6"></td>
+          <td class="tile" id="e6"></td>
+          <td class="tile" id="f6"></td>
+          <td class="tile" id="g6"></td>
+          <td class="tile" id="h6"></td>
         </tr>
         <tr>
-          <td id="a5"></td>
-          <td id="b5"></td>
-          <td id="c5"></td>
-          <td id="d5"></td>
-          <td id="e5"></td>
-          <td id="f5"></td>
-          <td id="g5"></td>
-          <td id="h5"></td>
+          <td class="tile" id="a5"></td>
+          <td class="tile" id="b5"></td>
+          <td class="tile" id="c5"></td>
+          <td class="tile" id="d5"></td>
+          <td class="tile" id="e5"></td>
+          <td class="tile" id="f5"></td>
+          <td class="tile" id="g5"></td>
+          <td class="tile" id="h5"></td>
         </tr>
         <tr>
-          <td id="a4"></td>
-          <td id="b4"></td>
-          <td id="c4"></td>
-          <td id="d4"></td>
-          <td id="e4"></td>
-          <td id="f4"></td>
-          <td id="g4"></td>
-          <td id="h4"></td>
+          <td class="tile" id="a4"></td>
+          <td class="tile" id="b4"></td>
+          <td class="tile" id="c4"></td>
+          <td class="tile" id="d4"></td>
+          <td class="tile" id="e4"></td>
+          <td class="tile" id="f4"></td>
+          <td class="tile" id="g4"></td>
+          <td class="tile" id="h4"></td>
         </tr>
         <tr>
-          <td id="a3"></td>
-          <td id="b3"></td>
-          <td id="c3"></td>
-          <td id="d3"></td>
-          <td id="e3"></td>
-          <td id="f3"></td>
-          <td id="g3"></td>
-          <td id="h3"></td>
+          <td class="tile" id="a3"></td>
+          <td class="tile" id="b3"></td>
+          <td class="tile" id="c3"></td>
+          <td class="tile" id="d3"></td>
+          <td class="tile" id="e3"></td>
+          <td class="tile" id="f3"></td>
+          <td class="tile" id="g3"></td>
+          <td class="tile" id="h3"></td>
         </tr>
         <tr>
-          <td id="a2">wP</td>
-          <td id="b2">wP</td>
-          <td id="c2">wP</td>
-          <td id="d2">wP</td>
-          <td id="e2">wP</td>
-          <td id="f2">wP</td>
-          <td id="g2">wP</td>
-          <td id="h2">wP</td>
+          <td class="tile" id="a7"><div class="piece" draggable="true">wP<div></td>
+          <td class="tile" id="b7"><div class="piece" draggable="true">wP<div></td>
+          <td class="tile" id="c7"><div class="piece" draggable="true">wP<div></td>
+          <td class="tile" id="d7"><div class="piece" draggable="true">wP<div></td>
+          <td class="tile" id="e7"><div class="piece" draggable="true">wP<div></td>
+          <td class="tile" id="f7"><div class="piece" draggable="true">wP<div></td>
+          <td class="tile" id="g7"><div class="piece" draggable="true">wP<div></td>
+          <td class="tile" id="h7"><div class="piece" draggable="true">wP<div></td>
         </tr>
         <tr>
-          <td id="a1">wR</td>
-          <td id="b1">wB</td>
-          <td id="c1">wN</td>
-          <td id="d1">wK</td>
-          <td id="e1">wQ</td>
-          <td id="f1">wN</td>
-          <td id="g1">wB</td>
-          <td id="h1">wR</td>
+          <td class="tile" id="a8"><div class="piece" draggable="true">wR<div></td>
+          <td class="tile" id="b8"><div class="piece" draggable="true">wB<div></td>
+          <td class="tile" id="c8"><div class="piece" draggable="true">wN<div></td>
+          <td class="tile" id="d8"><div class="piece" draggable="true">wK<div></td>
+          <td class="tile" id="e8"><div class="piece" draggable="true">wQ<div></td>
+          <td class="tile" id="f8"><div class="piece" draggable="true">wN<div></td>
+          <td class="tile" id="g8"><div class="piece" draggable="true">wB<div></td>
+          <td class="tile" id="h8"><div class="piece" draggable="true">wR<div></td>
         </tr>
       </table>
     </main>
