--- a/Chessboard.html
+++ b/Chessboard.html
@@ -14,24 +14,24 @@
       <p id='turnLabel'>Player X!</p>
       <table>
         <tr>
-          <td class="tile" id="a8"><div class="piece" draggable="true">bR</div></td>
-          <td class="tile" id="b8"><div class="piece" draggable="true">bB</div></td>
-          <td class="tile" id="c8"><div class="piece" draggable="true">bN</div></td>
-          <td class="tile" id="d8"><div class="piece" draggable="true">bK</div></td>
-          <td class="tile" id="e8"><div class="piece" draggable="true">bQ</div></td>
-          <td class="tile" id="f8"><div class="piece" draggable="true">bN</div></td>
-          <td class="tile" id="g8"><div class="piece" draggable="true">bB</div></td>
-          <td class="tile" id="h8"><div class="piece" draggable="true">bR</div></td>
+          <td class="tile" id="a8"><div class="piece bR" draggable="true"><img src="sprites/blackRook.png"></div></td>
+          <td class="tile" id="b8"><div class="piece bB" draggable="true"><img src="sprites/blackBishop.png"></div></td>
+          <td class="tile" id="c8"><div class="piece bN" draggable="true"><img src="sprites/blackKnight.png"></div></td>
+          <td class="tile" id="d8"><div class="piece bK" draggable="true"><img src="sprites/blackKing.png"></div></td>
+          <td class="tile" id="e8"><div class="piece bQ" draggable="true"><img src="sprites/blackQueen.png"></div></td>
+          <td class="tile" id="f8"><div class="piece bN" draggable="true"><img src="sprites/blackKnight.png"></div></td>
+          <td class="tile" id="g8"><div class="piece bB" draggable="true"><img src="sprites/blackBishop.png"></div></td>
+          <td class="tile" id="h8"><div class="piece bR" draggable="true"><img src="sprites/blackRook.png"></div></td>
         </tr>
         <tr>
-          <td class="tile" id="a7"><div class="piece" draggable="true">bP</div></td>
-          <td class="tile" id="b7"><div class="piece" draggable="true">bP</div></td>
-          <td class="tile" id="c7"><div class="piece" draggable="true">bP</div></td>
-          <td class="tile" id="d7"><div class="piece" draggable="true">bP</div></td>
-          <td class="tile" id="e7"><div class="piece" draggable="true">bP</div></td>
-          <td class="tile" id="f7"><div class="piece" draggable="true">bP</div></td>
-          <td class="tile" id="g7"><div class="piece" draggable="true">bP</div></td>
-          <td class="tile" id="h7"><div class="piece" draggable="true">bP</div></td>
+          <td class="tile" id="a7"><div class="piece bP" draggable="true"><img src="sprites/blackPawn.png"></div></td>
+          <td class="tile" id="b7"><div class="piece bP" draggable="true"><img src="sprites/blackPawn.png"></div></td>
+          <td class="tile" id="c7"><div class="piece bP" draggable="true"><img src="sprites/blackPawn.png"></div></td>
+          <td class="tile" id="d7"><div class="piece bP" draggable="true"><img src="sprites/blackPawn.png"></div></td>
+          <td class="tile" id="e7"><div class="piece bP" draggable="true"><img src="sprites/blackPawn.png"></div></td>
+          <td class="tile" id="f7"><div class="piece bP" draggable="true"><img src="sprites/blackPawn.png"></div></td>
+          <td class="tile" id="g7"><div class="piece bP" draggable="true"><img src="sprites/blackPawn.png"></div></td>
+          <td class="tile" id="h7"><div class="piece bP" draggable="true"><img src="sprites/blackPawn.png"></div></td>
         </tr>
         <tr>
           <td class="tile" id="a6"></td>
@@ -74,24 +74,24 @@
           <td class="tile" id="h3"></td>
         </tr>
         <tr>
-          <td class="tile" id="a2"><div class="piece" draggable="true">wP</div></td>
-          <td class="tile" id="b2"><div class="piece" draggable="true">wP</div></td>
-          <td class="tile" id="c2"><div class="piece" draggable="true">wP</div></td>
-          <td class="tile" id="d2"><div class="piece" draggable="true">wP</div></td>
-          <td class="tile" id="e2"><div class="piece" draggable="true">wP</div></td>
-          <td class="tile" id="f2"><div class="piece" draggable="true">wP</div></td>
-          <td class="tile" id="g2"><div class="piece" draggable="true">wP</div></td>
-          <td class="tile" id="h2"><div class="piece" draggable="true">wP</div></td>
+          <td class="tile" id="a2"><div class="piece wP" draggable="true"><img src="sprites/whitePawn.png"></div></td>
+          <td class="tile" id="b2"><div class="piece wP" draggable="true"><img src="sprites/whitePawn.png"></div></td>
+          <td class="tile" id="d2"><div class="piece wP" draggable="true"><img src="sprites/whitePawn.png"></div></td>
+          <td class="tile" id="c2"><div class="piece wP" draggable="true"><img src="sprites/whitePawn.png"></div></td>
+          <td class="tile" id="e2"><div class="piece wP" draggable="true"><img src="sprites/whitePawn.png"></div></td>
+          <td class="tile" id="f2"><div class="piece wP" draggable="true"><img src="sprites/whitePawn.png"></div></td>
+          <td class="tile" id="g2"><div class="piece wP" draggable="true"><img src="sprites/whitePawn.png"></div></td>
+          <td class="tile" id="h2"><div class="piece wP" draggable="true"><img src="sprites/whitePawn.png"></div></td>
         </tr>
         <tr>
-          <td class="tile" id="a1"><div class="piece" draggable="true">wR</div></td>
-          <td class="tile" id="b1"><div class="piece" draggable="true">wB</div></td>
-          <td class="tile" id="c1"><div class="piece" draggable="true">wN</div></td>
-          <td class="tile" id="d1"><div class="piece" draggable="true">wK</div></td>
-          <td class="tile" id="e1"><div class="piece" draggable="true">wQ</div></td>
-          <td class="tile" id="f1"><div class="piece" draggable="true">wN</div></td>
-          <td class="tile" id="g1"><div class="piece" draggable="true">wB</div></td>
-          <td class="tile" id="h1"><div class="piece" draggable="true">wR</div></td>
+          <td class="tile" id="a1"><div class="piece wR" draggable="true"><img src="sprites/whiteRook.png"></div></td>
+          <td class="tile" id="b1"><div class="piece wB" draggable="true"><img src="sprites/whiteBishop.png"></div></td>
+          <td class="tile" id="c1"><div class="piece wN" draggable="true"><img src="sprites/whiteKnight.png"></div></td>
+          <td class="tile" id="d1"><div class="piece wK" draggable="true"><img src="sprites/whiteKing.png"></div></td>
+          <td class="tile" id="e1"><div class="piece wQ" draggable="true"><img src="sprites/whiteQueen.png"></div></td>
+          <td class="tile" id="f1"><div class="piece wN" draggable="true"><img src="sprites/whiteKnight.png"></div></td>
+          <td class="tile" id="g1"><div class="piece wB" draggable="true"><img src="sprites/whiteBishop.png"></div></td>
+          <td class="tile" id="h1"><div class="piece wR" draggable="true"><img src="sprites/whiteRook.png"></div></td>
         </tr>
       </table>
     </main>
